syntax.output
Terminals unused in grammar

   INCLUDE


State 165 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier ExtDecList error
    6       | Specifier SEMI
    7       | Specifier error
    8       | Specifier FunDec CompSt

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCTTrigger ID LC DefList RC
   14                | STRUCTTrigger ID

   15 STRUCTTrigger: STRUCT

   16 VarDec: ID
   17       | VarDec LB INT RB

   18 FunDec: FunID LP VarList RP
   19       | FunID LP VarList error
   20       | FunID LP RP
   21       | FunID LP error

   22 FunID: ID

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LCTrigger DefList StmtList RCTrigger
   27       | LC error DefList StmtList RC

   28 LCTrigger: LC

   29 RCTrigger: RC

   30 StmtList: Stmt StmtList
   31         | %empty

   32 Stmt: Exp SEMI
   33     | Exp error
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | RETURN Exp error
   37     | IF LP ConditionExp RP M1 Stmt M2
   38     | IF LP ConditionExp error Stmt
   39     | IF LP ConditionExp RP M1 Stmt ELSE M2 Stmt
   40     | IF LP ConditionExp error Stmt ELSE Stmt
   41     | WHILETrigger LP ConditionExp RP ConditionEndTrigger
   42     | WHILETrigger LP ConditionExp error ConditionEndTrigger
   43     | FORTrigger LP Def ConditionExp SEMI Exp RP ConditionEndTrigger
   44     | FORTrigger LP Def ConditionExp error Exp RP ConditionEndTrigger
   45     | FORTrigger LP Def ConditionExp error Exp error ConditionEndTrigger
   46     | FORTrigger LP Def ConditionExp SEMI Exp error ConditionEndTrigger
   47     | BREAK SEMI
   48     | CONTINUE SEMI

   49 M1: %empty

   50 M2: %empty

   51 WHILETrigger: WHILE

   52 FORTrigger: FOR

   53 ConditionEndTrigger: Stmt

   54 ConditionExp: Exp

   55 DefList: Def DefList
   56        | %empty

   57 Def: Specifier DecList SEMI
   58    | Specifier DecList error

   59 DecList: Dec
   60        | Dec COMMA DecList

   61 Dec: VarDec
   62    | VarDec ASSIGN Exp

   63 Exp: Exp ASSIGN Exp
   64    | Exp AND Exp
   65    | Exp OR Exp
   66    | Exp LT Exp
   67    | Exp LE Exp
   68    | Exp GT Exp
   69    | Exp GE Exp
   70    | Exp NE Exp
   71    | Exp EQ Exp
   72    | Exp PLUS Exp
   73    | Exp MINUS Exp
   74    | Exp MUL Exp
   75    | Exp DIV Exp
   76    | Exp UNKNOW Exp
   77    | LP Exp RP
   78    | LP Exp error
   79    | MINUS Exp
   80    | NOT Exp
   81    | ID LP Args RP
   82    | ID LP Args error
   83    | ID LP RP
   84    | ID LP error
   85    | Exp LB Exp RB
   86    | Exp DOT ID
   87    | ID
   88    | INT
   89    | FLOAT
   90    | CHAR
   91    | UNKNOW
   92    | READ LP RP
   93    | WRITE LP Exp RP

   94 Args: Exp COMMA Args
   95     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 5 7 19 21 27 33 36 38 40 42 44 45 46 58 78 82 84
INT (258) 17 88
FLOAT (259) 89
CHAR (260) 90
ID (261) 13 14 16 22 81 82 83 84 86 87
TYPE (262) 11
STRUCT (263) 15
IF (264) 37 38 39 40
ELSE (265) 39 40
WHILE (266) 51
RETURN (267) 35 36
DOT (268) 86
SEMI (269) 4 6 32 35 43 46 47 48 57
COMMA (270) 10 23 60 94
FOR (271) 52
ASSIGN (272) 62 63
LT (273) 66
LE (274) 67
GT (275) 68
GE (276) 69
NE (277) 70
EQ (278) 71
PLUS (279) 72
MINUS (280) 73 79
MUL (281) 74
DIV (282) 75
AND (283) 64
OR (284) 65
NOT (285) 80
LP (286) 18 19 20 21 37 38 39 40 41 42 43 44 45 46 77 78 81 82 83 84
    92 93
RP (287) 18 20 37 39 41 43 44 77 81 83 92 93
LB (288) 17 85
RB (289) 17 85
LC (290) 13 27 28
RC (291) 13 27 29
INCLUDE (292)
UNKNOW (293) 76 91
BREAK (294) 47
CONTINUE (295) 48
WRITE (296) 93
READ (297) 92
HIGH_MINUS (298)
LOWER_ELSE (299)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
Program (46)
    on left: 1, on right: 0
ExtDefList (47)
    on left: 2 3, on right: 1 2
ExtDef (48)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (49)
    on left: 9 10, on right: 4 5 10
Specifier (50)
    on left: 11 12, on right: 4 5 6 7 8 25 57 58
StructSpecifier (51)
    on left: 13 14, on right: 12
STRUCTTrigger (52)
    on left: 15, on right: 13 14
VarDec (53)
    on left: 16 17, on right: 9 10 17 25 61 62
FunDec (54)
    on left: 18 19 20 21, on right: 8
FunID (55)
    on left: 22, on right: 18 19 20 21
VarList (56)
    on left: 23 24, on right: 18 19 23
ParamDec (57)
    on left: 25, on right: 23 24
CompSt (58)
    on left: 26 27, on right: 8 34
LCTrigger (59)
    on left: 28, on right: 26
RCTrigger (60)
    on left: 29, on right: 26
StmtList (61)
    on left: 30 31, on right: 26 27 30
Stmt (62)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48, on right:
    30 37 38 39 40 53
M1 (63)
    on left: 49, on right: 37 39
M2 (64)
    on left: 50, on right: 37 39
WHILETrigger (65)
    on left: 51, on right: 41 42
FORTrigger (66)
    on left: 52, on right: 43 44 45 46
ConditionEndTrigger (67)
    on left: 53, on right: 41 42 43 44 45 46
ConditionExp (68)
    on left: 54, on right: 37 38 39 40 41 42 43 44 45 46
DefList (69)
    on left: 55 56, on right: 13 26 27 55
Def (70)
    on left: 57 58, on right: 43 44 45 46 55
DecList (71)
    on left: 59 60, on right: 57 58 60
Dec (72)
    on left: 61 62, on right: 59 60
Exp (73)
    on left: 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
    81 82 83 84 85 86 87 88 89 90 91 92 93, on right: 32 33 35 36 43
    44 45 46 54 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    79 80 85 86 93 94 95
Args (74)
    on left: 94 95, on right: 81 82 94


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7
    STRUCTTrigger    go to state 8


State 1

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 2

   15 STRUCTTrigger: STRUCT .

    $default  reduce using rule 15 (STRUCTTrigger)


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 9


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 10
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7
    STRUCTTrigger    go to state 8


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . ExtDecList error
    6       | Specifier . SEMI
    7       | Specifier . error
    8       | Specifier . FunDec CompSt

    error  shift, and go to state 11
    ID     shift, and go to state 12
    SEMI   shift, and go to state 13

    ExtDecList  go to state 14
    VarDec      go to state 15
    FunDec      go to state 16
    FunID       go to state 17


State 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 8

   13 StructSpecifier: STRUCTTrigger . ID LC DefList RC
   14                | STRUCTTrigger . ID

    ID  shift, and go to state 18


State 9

    0 $accept: Program $end .

    $default  accept


State 10

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 11

    7 ExtDef: Specifier error .

    $default  reduce using rule 7 (ExtDef)


State 12

   16 VarDec: ID .
   22 FunID: ID .

    LP        reduce using rule 22 (FunID)
    $default  reduce using rule 16 (VarDec)


State 13

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 14

    4 ExtDef: Specifier ExtDecList . SEMI
    5       | Specifier ExtDecList . error

    error  shift, and go to state 19
    SEMI   shift, and go to state 20


State 15

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 9 (ExtDecList)


State 16

    8 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 23

    CompSt     go to state 24
    LCTrigger  go to state 25


State 17

   18 FunDec: FunID . LP VarList RP
   19       | FunID . LP VarList error
   20       | FunID . LP RP
   21       | FunID . LP error

    LP  shift, and go to state 26


State 18

   13 StructSpecifier: STRUCTTrigger ID . LC DefList RC
   14                | STRUCTTrigger ID .

    LC  shift, and go to state 27

    $default  reduce using rule 14 (StructSpecifier)


State 19

    5 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 5 (ExtDef)


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 28

    ExtDecList  go to state 29
    VarDec      go to state 15


State 22

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 30


State 23

   27 CompSt: LC . error DefList StmtList RC
   28 LCTrigger: LC .

    error  shift, and go to state 31

    INT       reduce using rule 28 (LCTrigger)
    FLOAT     reduce using rule 28 (LCTrigger)
    CHAR      reduce using rule 28 (LCTrigger)
    ID        reduce using rule 28 (LCTrigger)
    TYPE      reduce using rule 28 (LCTrigger)
    STRUCT    reduce using rule 28 (LCTrigger)
    IF        reduce using rule 28 (LCTrigger)
    WHILE     reduce using rule 28 (LCTrigger)
    RETURN    reduce using rule 28 (LCTrigger)
    FOR       reduce using rule 28 (LCTrigger)
    MINUS     reduce using rule 28 (LCTrigger)
    NOT       reduce using rule 28 (LCTrigger)
    LP        reduce using rule 28 (LCTrigger)
    LC        reduce using rule 28 (LCTrigger)
    RC        reduce using rule 28 (LCTrigger)
    UNKNOW    reduce using rule 28 (LCTrigger)
    BREAK     reduce using rule 28 (LCTrigger)
    CONTINUE  reduce using rule 28 (LCTrigger)
    WRITE     reduce using rule 28 (LCTrigger)
    READ      reduce using rule 28 (LCTrigger)


State 24

    8 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 8 (ExtDef)


State 25

   26 CompSt: LCTrigger . DefList StmtList RCTrigger

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 56 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 7
    STRUCTTrigger    go to state 8
    DefList          go to state 33
    Def              go to state 34


State 26

   18 FunDec: FunID LP . VarList RP
   19       | FunID LP . VarList error
   20       | FunID LP . RP
   21       | FunID LP . error

    error   shift, and go to state 35
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 36

    Specifier        go to state 37
    StructSpecifier  go to state 7
    STRUCTTrigger    go to state 8
    VarList          go to state 38
    ParamDec         go to state 39


State 27

   13 StructSpecifier: STRUCTTrigger ID LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 56 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 7
    STRUCTTrigger    go to state 8
    DefList          go to state 40
    Def              go to state 34


State 28

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 29

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 30

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 41


State 31

   27 CompSt: LC error . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 56 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 7
    STRUCTTrigger    go to state 8
    DefList          go to state 42
    Def              go to state 34


State 32

   57 Def: Specifier . DecList SEMI
   58    | Specifier . DecList error

    ID  shift, and go to state 28

    VarDec   go to state 43
    DecList  go to state 44
    Dec      go to state 45


State 33

   26 CompSt: LCTrigger DefList . StmtList RCTrigger

    INT       shift, and go to state 46
    FLOAT     shift, and go to state 47
    CHAR      shift, and go to state 48
    ID        shift, and go to state 49
    IF        shift, and go to state 50
    WHILE     shift, and go to state 51
    RETURN    shift, and go to state 52
    FOR       shift, and go to state 53
    MINUS     shift, and go to state 54
    NOT       shift, and go to state 55
    LP        shift, and go to state 56
    LC        shift, and go to state 23
    UNKNOW    shift, and go to state 57
    BREAK     shift, and go to state 58
    CONTINUE  shift, and go to state 59
    WRITE     shift, and go to state 60
    READ      shift, and go to state 61

    $default  reduce using rule 31 (StmtList)

    CompSt        go to state 62
    LCTrigger     go to state 25
    StmtList      go to state 63
    Stmt          go to state 64
    WHILETrigger  go to state 65
    FORTrigger    go to state 66
    Exp           go to state 67


State 34

   55 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 56 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 7
    STRUCTTrigger    go to state 8
    DefList          go to state 68
    Def              go to state 34


State 35

   21 FunDec: FunID LP error .

    $default  reduce using rule 21 (FunDec)


State 36

   20 FunDec: FunID LP RP .

    $default  reduce using rule 20 (FunDec)


State 37

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 28

    VarDec  go to state 69


State 38

   18 FunDec: FunID LP VarList . RP
   19       | FunID LP VarList . error

    error  shift, and go to state 70
    RP     shift, and go to state 71


State 39

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 72

    $default  reduce using rule 24 (VarList)


State 40

   13 StructSpecifier: STRUCTTrigger ID LC DefList . RC

    RC  shift, and go to state 73


State 41

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 42

   27 CompSt: LC error DefList . StmtList RC

    INT       shift, and go to state 46
    FLOAT     shift, and go to state 47
    CHAR      shift, and go to state 48
    ID        shift, and go to state 49
    IF        shift, and go to state 50
    WHILE     shift, and go to state 51
    RETURN    shift, and go to state 52
    FOR       shift, and go to state 53
    MINUS     shift, and go to state 54
    NOT       shift, and go to state 55
    LP        shift, and go to state 56
    LC        shift, and go to state 23
    UNKNOW    shift, and go to state 57
    BREAK     shift, and go to state 58
    CONTINUE  shift, and go to state 59
    WRITE     shift, and go to state 60
    READ      shift, and go to state 61

    $default  reduce using rule 31 (StmtList)

    CompSt        go to state 62
    LCTrigger     go to state 25
    StmtList      go to state 74
    Stmt          go to state 64
    WHILETrigger  go to state 65
    FORTrigger    go to state 66
    Exp           go to state 67


State 43

   17 VarDec: VarDec . LB INT RB
   61 Dec: VarDec .
   62    | VarDec . ASSIGN Exp

    ASSIGN  shift, and go to state 75
    LB      shift, and go to state 22

    $default  reduce using rule 61 (Dec)


State 44

   57 Def: Specifier DecList . SEMI
   58    | Specifier DecList . error

    error  shift, and go to state 76
    SEMI   shift, and go to state 77


State 45

   59 DecList: Dec .
   60        | Dec . COMMA DecList

    COMMA  shift, and go to state 78

    $default  reduce using rule 59 (DecList)


State 46

   88 Exp: INT .

    $default  reduce using rule 88 (Exp)


State 47

   89 Exp: FLOAT .

    $default  reduce using rule 89 (Exp)


State 48

   90 Exp: CHAR .

    $default  reduce using rule 90 (Exp)


State 49

   81 Exp: ID . LP Args RP
   82    | ID . LP Args error
   83    | ID . LP RP
   84    | ID . LP error
   87    | ID .

    LP  shift, and go to state 79

    $default  reduce using rule 87 (Exp)


State 50

   37 Stmt: IF . LP ConditionExp RP M1 Stmt M2
   38     | IF . LP ConditionExp error Stmt
   39     | IF . LP ConditionExp RP M1 Stmt ELSE M2 Stmt
   40     | IF . LP ConditionExp error Stmt ELSE Stmt

    LP  shift, and go to state 80


State 51

   51 WHILETrigger: WHILE .

    $default  reduce using rule 51 (WHILETrigger)


State 52

   35 Stmt: RETURN . Exp SEMI
   36     | RETURN . Exp error

    INT     shift, and go to state 46
    FLOAT   shift, and go to state 47
    CHAR    shift, and go to state 48
    ID      shift, and go to state 49
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    UNKNOW  shift, and go to state 57
    WRITE   shift, and go to state 60
    READ    shift, and go to state 61

    Exp  go to state 81


State 53

   52 FORTrigger: FOR .

    $default  reduce using rule 52 (FORTrigger)


State 54

   79 Exp: MINUS . Exp

    INT     shift, and go to state 46
    FLOAT   shift, and go to state 47
    CHAR    shift, and go to state 48
    ID      shift, and go to state 49
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    UNKNOW  shift, and go to state 57
    WRITE   shift, and go to state 60
    READ    shift, and go to state 61

    Exp  go to state 82


State 55

   80 Exp: NOT . Exp

    INT     shift, and go to state 46
    FLOAT   shift, and go to state 47
    CHAR    shift, and go to state 48
    ID      shift, and go to state 49
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    UNKNOW  shift, and go to state 57
    WRITE   shift, and go to state 60
    READ    shift, and go to state 61

    Exp  go to state 83


State 56

   77 Exp: LP . Exp RP
   78    | LP . Exp error

    INT     shift, and go to state 46
    FLOAT   shift, and go to state 47
    CHAR    shift, and go to state 48
    ID      shift, and go to state 49
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    UNKNOW  shift, and go to state 57
    WRITE   shift, and go to state 60
    READ    shift, and go to state 61

    Exp  go to state 84


State 57

   91 Exp: UNKNOW .

    $default  reduce using rule 91 (Exp)


State 58

   47 Stmt: BREAK . SEMI

    SEMI  shift, and go to state 85


State 59

   48 Stmt: CONTINUE . SEMI

    SEMI  shift, and go to state 86


State 60

   93 Exp: WRITE . LP Exp RP

    LP  shift, and go to state 87


State 61

   92 Exp: READ . LP RP

    LP  shift, and go to state 88


State 62

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


State 63

   26 CompSt: LCTrigger DefList StmtList . RCTrigger

    RC  shift, and go to state 89

    RCTrigger  go to state 90


State 64

   30 StmtList: Stmt . StmtList

    INT       shift, and go to state 46
    FLOAT     shift, and go to state 47
    CHAR      shift, and go to state 48
    ID        shift, and go to state 49
    IF        shift, and go to state 50
    WHILE     shift, and go to state 51
    RETURN    shift, and go to state 52
    FOR       shift, and go to state 53
    MINUS     shift, and go to state 54
    NOT       shift, and go to state 55
    LP        shift, and go to state 56
    LC        shift, and go to state 23
    UNKNOW    shift, and go to state 57
    BREAK     shift, and go to state 58
    CONTINUE  shift, and go to state 59
    WRITE     shift, and go to state 60
    READ      shift, and go to state 61

    $default  reduce using rule 31 (StmtList)

    CompSt        go to state 62
    LCTrigger     go to state 25
    StmtList      go to state 91
    Stmt          go to state 64
    WHILETrigger  go to state 65
    FORTrigger    go to state 66
    Exp           go to state 67


State 65

   41 Stmt: WHILETrigger . LP ConditionExp RP ConditionEndTrigger
   42     | WHILETrigger . LP ConditionExp error ConditionEndTrigger

    LP  shift, and go to state 92


State 66

   43 Stmt: FORTrigger . LP Def ConditionExp SEMI Exp RP ConditionEndTrigger
   44     | FORTrigger . LP Def ConditionExp error Exp RP ConditionEndTrigger
   45     | FORTrigger . LP Def ConditionExp error Exp error ConditionEndTrigger
   46     | FORTrigger . LP Def ConditionExp SEMI Exp error ConditionEndTrigger

    LP  shift, and go to state 93


State 67

   32 Stmt: Exp . SEMI
   33     | Exp . error
   63 Exp: Exp . ASSIGN Exp
   64    | Exp . AND Exp
   65    | Exp . OR Exp
   66    | Exp . LT Exp
   67    | Exp . LE Exp
   68    | Exp . GT Exp
   69    | Exp . GE Exp
   70    | Exp . NE Exp
   71    | Exp . EQ Exp
   72    | Exp . PLUS Exp
   73    | Exp . MINUS Exp
   74    | Exp . MUL Exp
   75    | Exp . DIV Exp
   76    | Exp . UNKNOW Exp
   85    | Exp . LB Exp RB
   86    | Exp . DOT ID

    error   shift, and go to state 94
    DOT     shift, and go to state 95
    SEMI    shift, and go to state 96
    ASSIGN  shift, and go to state 97
    LT      shift, and go to state 98
    LE      shift, and go to state 99
    GT      shift, and go to state 100
    GE      shift, and go to state 101
    NE      shift, and go to state 102
    EQ      shift, and go to state 103
    PLUS    shift, and go to state 104
    MINUS   shift, and go to state 105
    MUL     shift, and go to state 106
    DIV     shift, and go to state 107
    AND     shift, and go to state 108
    OR      shift, and go to state 109
    LB      shift, and go to state 110
    UNKNOW  shift, and go to state 111


State 68

   55 DefList: Def DefList .

    $default  reduce using rule 55 (DefList)


State 69

   17 VarDec: VarDec . LB INT RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 25 (ParamDec)


State 70

   19 FunDec: FunID LP VarList error .

    $default  reduce using rule 19 (FunDec)


State 71

   18 FunDec: FunID LP VarList RP .

    $default  reduce using rule 18 (FunDec)


State 72

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 37
    StructSpecifier  go to state 7
    STRUCTTrigger    go to state 8
    VarList          go to state 112
    ParamDec         go to state 39


State 73

   13 StructSpecifier: STRUCTTrigger ID LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 74

   27 CompSt: LC error DefList StmtList . RC

    RC  shift, and go to state 113


State 75

   62 Dec: VarDec ASSIGN . Exp

    INT     shift, and go to state 46
    FLOAT   shift, and go to state 47
    CHAR    shift, and go to state 48
    ID      shift, and go to state 49
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    UNKNOW  shift, and go to state 57
    WRITE   shift, and go to state 60
    READ    shift, and go to state 61

    Exp  go to state 114


State 76

   58 Def: Specifier DecList error .

    $default  reduce using rule 58 (Def)


State 77

   57 Def: Specifier DecList SEMI .

    $default  reduce using rule 57 (Def)


State 78

   60 DecList: Dec COMMA . DecList

    ID  shift, and go to state 28

    VarDec   go to state 43
    DecList  go to state 115
    Dec      go to state 45


State 79

   81 Exp: ID LP . Args RP
   82    | ID LP . Args error
   83    | ID LP . RP
   84    | ID LP . error

    error   shift, and go to state 116
    INT     shift, and go to state 46
    FLOAT   shift, and go to state 47
    CHAR    shift, and go to state 48
    ID      shift, and go to state 49
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    RP      shift, and go to state 117
    UNKNOW  shift, and go to state 57
    WRITE   shift, and go to state 60
    READ    shift, and go to state 61

    Exp   go to state 118
    Args  go to state 119


State 80

   37 Stmt: IF LP . ConditionExp RP M1 Stmt M2
   38     | IF LP . ConditionExp error Stmt
   39     | IF LP . ConditionExp RP M1 Stmt ELSE M2 Stmt
   40     | IF LP . ConditionExp error Stmt ELSE Stmt

    INT     shift, and go to state 46
    FLOAT   shift, and go to state 47
    CHAR    shift, and go to state 48
    ID      shift, and go to state 49
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    UNKNOW  shift, and go to state 57
    WRITE   shift, and go to state 60
    READ    shift, and go to state 61

    ConditionExp  go to state 120
    Exp           go to state 121


State 81

   35 Stmt: RETURN Exp . SEMI
   36     | RETURN Exp . error
   63 Exp: Exp . ASSIGN Exp
   64    | Exp . AND Exp
   65    | Exp . OR Exp
   66    | Exp . LT Exp
   67    | Exp . LE Exp
   68    | Exp . GT Exp
   69    | Exp . GE Exp
   70    | Exp . NE Exp
   71    | Exp . EQ Exp
   72    | Exp . PLUS Exp
   73    | Exp . MINUS Exp
   74    | Exp . MUL Exp
   75    | Exp . DIV Exp
   76    | Exp . UNKNOW Exp
   85    | Exp . LB Exp RB
   86    | Exp . DOT ID

    error   shift, and go to state 122
    DOT     shift, and go to state 95
    SEMI    shift, and go to state 123
    ASSIGN  shift, and go to state 97
    LT      shift, and go to state 98
    LE      shift, and go to state 99
    GT      shift, and go to state 100
    GE      shift, and go to state 101
    NE      shift, and go to state 102
    EQ      shift, and go to state 103
    PLUS    shift, and go to state 104
    MINUS   shift, and go to state 105
    MUL     shift, and go to state 106
    DIV     shift, and go to state 107
    AND     shift, and go to state 108
    OR      shift, and go to state 109
    LB      shift, and go to state 110
    UNKNOW  shift, and go to state 111


State 82

   63 Exp: Exp . ASSIGN Exp
   64    | Exp . AND Exp
   65    | Exp . OR Exp
   66    | Exp . LT Exp
   67    | Exp . LE Exp
   68    | Exp . GT Exp
   69    | Exp . GE Exp
   70    | Exp . NE Exp
   71    | Exp . EQ Exp
   72    | Exp . PLUS Exp
   73    | Exp . MINUS Exp
   74    | Exp . MUL Exp
   75    | Exp . DIV Exp
   76    | Exp . UNKNOW Exp
   79    | MINUS Exp .
   85    | Exp . LB Exp RB
   86    | Exp . DOT ID

    DOT     shift, and go to state 95
    LB      shift, and go to state 110
    UNKNOW  shift, and go to state 111

    $default  reduce using rule 79 (Exp)


State 83

   63 Exp: Exp . ASSIGN Exp
   64    | Exp . AND Exp
   65    | Exp . OR Exp
   66    | Exp . LT Exp
   67    | Exp . LE Exp
   68    | Exp . GT Exp
   69    | Exp . GE Exp
   70    | Exp . NE Exp
   71    | Exp . EQ Exp
   72    | Exp . PLUS Exp
   73    | Exp . MINUS Exp
   74    | Exp . MUL Exp
   75    | Exp . DIV Exp
   76    | Exp . UNKNOW Exp
   80    | NOT Exp .
   85    | Exp . LB Exp RB
   86    | Exp . DOT ID

    DOT     shift, and go to state 95
    LB      shift, and go to state 110
    UNKNOW  shift, and go to state 111

    $default  reduce using rule 80 (Exp)


State 84

   63 Exp: Exp . ASSIGN Exp
   64    | Exp . AND Exp
   65    | Exp . OR Exp
   66    | Exp . LT Exp
   67    | Exp . LE Exp
   68    | Exp . GT Exp
   69    | Exp . GE Exp
   70    | Exp . NE Exp
   71    | Exp . EQ Exp
   72    | Exp . PLUS Exp
   73    | Exp . MINUS Exp
   74    | Exp . MUL Exp
   75    | Exp . DIV Exp
   76    | Exp . UNKNOW Exp
   77    | LP Exp . RP
   78    | LP Exp . error
   85    | Exp . LB Exp RB
   86    | Exp . DOT ID

    error   shift, and go to state 124
    DOT     shift, and go to state 95
    ASSIGN  shift, and go to state 97
    LT      shift, and go to state 98
    LE      shift, and go to state 99
    GT      shift, and go to state 100
    GE      shift, and go to state 101
    NE      shift, and go to state 102
    EQ      shift, and go to state 103
    PLUS    shift, and go to state 104
    MINUS   shift, and go to state 105
    MUL     shift, and go to state 106
    DIV     shift, and go to state 107
    AND     shift, and go to state 108
    OR      shift, and go to state 109
    RP      shift, and go to state 125
    LB      shift, and go to state 110
    UNKNOW  shift, and go to state 111


State 85

   47 Stmt: BREAK SEMI .

    $default  reduce using rule 47 (Stmt)


State 86

   48 Stmt: CONTINUE SEMI .

    $default  reduce using rule 48 (Stmt)


State 87

   93 Exp: WRITE LP . Exp RP

    INT     shift, and go to state 46
    FLOAT   shift, and go to state 47
    CHAR    shift, and go to state 48
    ID      shift, and go to state 49
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    UNKNOW  shift, and go to state 57
    WRITE   shift, and go to state 60
    READ    shift, and go to state 61

    Exp  go to state 126


State 88

   92 Exp: READ LP . RP

    RP  shift, and go to state 127


State 89

   29 RCTrigger: RC .

    $default  reduce using rule 29 (RCTrigger)


State 90

   26 CompSt: LCTrigger DefList StmtList RCTrigger .

    $default  reduce using rule 26 (CompSt)


State 91

   30 StmtList: Stmt StmtList .

    $default  reduce using rule 30 (StmtList)


State 92

   41 Stmt: WHILETrigger LP . ConditionExp RP ConditionEndTrigger
   42     | WHILETrigger LP . ConditionExp error ConditionEndTrigger

    INT     shift, and go to state 46
    FLOAT   shift, and go to state 47
    CHAR    shift, and go to state 48
    ID      shift, and go to state 49
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    UNKNOW  shift, and go to state 57
    WRITE   shift, and go to state 60
    READ    shift, and go to state 61

    ConditionExp  go to state 128
    Exp           go to state 121


State 93

   43 Stmt: FORTrigger LP . Def ConditionExp SEMI Exp RP ConditionEndTrigger
   44     | FORTrigger LP . Def ConditionExp error Exp RP ConditionEndTrigger
   45     | FORTrigger LP . Def ConditionExp error Exp error ConditionEndTrigger
   46     | FORTrigger LP . Def ConditionExp SEMI Exp error ConditionEndTrigger

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    STRUCTTrigger    go to state 8
    Def              go to state 129


State 94

   33 Stmt: Exp error .

    $default  reduce using rule 33 (Stmt)


State 95

   86 Exp: Exp DOT . ID

    ID  shift, and go to state 130


State 96

   32 Stmt: Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 97

   63 Exp: Exp ASSIGN . Exp

    INT     shift, and go to state 46
    FLOAT   shift, and go to state 47
    CHAR    shift, and go to state 48
    ID      shift, and go to state 49
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    UNKNOW  shift, and go to state 57
    WRITE   shift, and go to state 60
    READ    shift, and go to state 61

    Exp  go to state 131


State 98

   66 Exp: Exp LT . Exp
